Add Galician Language Pack Files

--- a/i18n/vscode-language-pack-gl/translations/extensions/configuration-editing.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/configuration-editing.i18n.json
@@ -9,64 +9,64 @@
 	"version": "1.0.0",
 	"contents": {
 		"dist/configurationEditingMain": {
-			"cwd": "El directorio de trabajo del ejecutor de tarea en el arranque",
-			"defaultBuildTask": "El nombre de la tarea de compilación predeterminada. Si no hay una única tarea de compilación predeterminada se muestra una selección rápida para elegir la tarea de compilación.",
-			"file": "El archivo abierto actualmente",
-			"fileBasename": "Nombre base del archivo abierto actual ",
-			"fileBasenameNoExtension": "Nombre base del archivo abierto actual sin extensión de archivo ",
-			"fileDirname": "Nombre del directorio del archivo abierto actual",
-			"fileExtname": "Extensión del archivo abierto actualmente",
-			"lineNumber": "El número de línea seleccionado actual en el archivo activo",
-			"pathSeparator": "Carácter que usa el sistema operativo para separar los componentes en las rutas de acceso de los archivos",
-			"relativeFile": "El archivo abierto actualmente relativo a ${workspaceFolder}",
-			"relativeFileDirname": "Nombre de directorio del archivo abierto actual en relación con ${workspaceFolder}",
-			"selectedText": "El texto actual seleccionado en el archivo activo ",
-			"workspaceFolder": "La ruta de la carpeta abierta en VS Code",
-			"workspaceFolderBasename": "El nombre de la carpeta abierta en VS Code sin ninguna barra diagonal (/)"
+			"cwd": "O directorio de traballo do executor da tarefa no arranque",
+			"defaultBuildTask": "O nome da tarefa de compilación predeterminada. Se non hai unha única tarefa de compilación predeterminada mostrase unha selección rápida para elixir a tarefa de compilación.",
+			"file": "O arquivo aberto actualmente",
+			"fileBasename": "Nome base do arquivo aberto actual ",
+			"fileBasenameNoExtension": "Nome base do arquivo aberto actual sen extensión de arquivo ",
+			"fileDirname": "Nome do directorio do arquivo aberto actual",
+			"fileExtname": "Extensión do arquivo aberto actualmente",
+			"lineNumber": "O número de líña seleccionado actual no arquivo activo",
+			"pathSeparator": "Carácter que usa o sistema operativo para separar os componentes nas rutas de acceso dos arquivos",
+			"relativeFile": "O arquivo aberto actualmente relativo a ${workspaceFolder}",
+			"relativeFileDirname": "Nome de directorio do arquivo aberto actual en relación con ${workspaceFolder}",
+			"selectedText": "O texto actual seleccionado no arquivo activo ",
+			"workspaceFolder": "A ruta do cartafol aberta en VS Code",
+			"workspaceFolderBasename": "O nome de la cartafol aberta en VS Code sen ningunha barra diagonal (/)"
 		},
 		"dist/extensionsProposals": {
-			"exampleExtension": "Ejemplo"
+			"exampleExtension": "Exemplo"
 		},
 		"dist/settingsDocumentHelper": {
-			"activeEditor": "Utilice el idioma del editor de texto actualmente activo, si existe",
-			"activeEditorLong": "la ruta de acceso completa del archivo (por ejemplo, /Users/Development/myFolder/myFileFolder/myFile.txt)",
-			"activeEditorMedium": "la ruta de acceso de archivo relativa a la carpeta de área de trabajo (p. ej. myFolder/myFileFolder/myFile.txt)",
-			"activeEditorShort": "el nombre del archivo (por ejemplo miarchivo.txt)",
-			"activeFolderLong": "la ruta completa de la carpeta que contiene el archivo (por ejemplo, /Users/Development/myFolder/myFileFolder)",
-			"activeFolderMedium": "la ruta de la carpeta que contiene el archivo, relativa a la carpeta del área de trabajo (por ejemplo myFolder/myFileFolder)",
-			"activeFolderShort": "el nombre de la carpeta en que se encuentra el archivo (por ejemplo, myFileFolder)",
-			"appName": "p. ej. VS Code",
-			"assocDescriptionFile": "Asigna todos los archivos cuyo nombre coincide con el patrón global al lenguaje con el identificador especificado.",
-			"assocDescriptionPath": "Asigna todos los archivos cuya ruta de acceso al lenguaje con el identificador especificado coincide con el patrón global de ruta de acceso absoluta.",
-			"assocLabelFile": "Archivos con extensión",
-			"assocLabelPath": "Archivos con ruta de acceso",
-			"derivedDescription": "Hacer coincidir archivos que tienen elementos del mismo nivel con el mismo nombre pero con extensión diferente.",
-			"derivedLabel": "Archivos con elementos del mismo nivel por nombre",
-			"dirty": "un indicador con modificaciones si el editor activo tiene modificaciones",
-			"falseDescription": "Deshabilitar el patrón.",
-			"fileDescription": "Hacer coincidir todos los archivos que tengan una extensión de archivo determinada.",
-			"fileLabel": "Archivos por extensión",
-			"filesDescription": "Hacer coincidir todos los archivos con cualquiera de las extensiones de archivo.",
-			"filesLabel": "Archivos con varias extensiones",
-			"folderDescription": "Hacer coincidir una carpeta con un nombre determinado en cualquier ubicación.",
-			"folderLabel": "Carpeta por nombre (cualquier ubicación)",
-			"folderName": "nombre de la carpeta del área de trabajo en la que el archivo está contenido (p. ej. myFolder)",
-			"folderPath": "ruta de acceso de archivo de la carpeta del área de trabajo en la que el archivo está contenido (p. ej. /Users/Development/myFolder)",
-			"languageSpecificEditorSettings": "Configuración del editor específica del lenguaje",
-			"languageSpecificEditorSettingsDescription": "Reemplazar configuración del editor para lenguaje",
-			"remoteName": "por ejemplo, SSH",
-			"rootName": "nombre del área de trabajo (p. ej. myFolder o myWorkspace)",
-			"rootPath": "ruta del archivo del área de trabajo (p. ej. /Users/Development/myWorkspace)",
-			"separator": "un separador condicional (\"-\") que aparece solo cuando está rodeado de variables con valores",
-			"siblingsDescription": "Hacer coincidir archivos que tienen elementos del mismo nivel con el mismo nombre pero con extensión diferente.",
-			"topFolderDescription": "Hacer coincidir una carpeta de nivel superior con un nombre específico.",
-			"topFolderLabel": "Carpeta por nombre (nivel superior)",
-			"topFoldersDescription": "Hacer coincidir varias carpetas de nivel superior.",
-			"topFoldersLabel": "Carpetas con varios nombres (nivel superior)",
-			"trueDescription": "Habilitar el patrón."
+			"activeEditor": "Utilice o idioma do editor de texto actualmente activo, se existe",
+			"activeEditorLong": "a ruta de acceso completa do arquivo (por Exemplo, /Users/Development/myFolder/myFileFolder/myFile.txt)",
+			"activeEditorMedium": "a ruta de acceso de arquivo relativa ao cartafol de área de traballo (p. ex. myFolder/myFileFolder/myFile.txt)",
+			"activeEditorShort": "o nome do arquivo (por Exemplo omeuarquivo.txt)",
+			"activeFolderLong": "a ruta completa do cartafol que conten o arquivo (por Exemplo, /Users/Development/myFolder/myFileFolder)",
+			"activeFolderMedium": "a ruta do cartafol que conten o arquivo, relativa ao cartafol da área de traballo (por Exemplo myFolder/myFileFolder)",
+			"activeFolderShort": "o nome do cartafol no que se atopa o arquivo (por Exemplo, myFileFolder)",
+			"appName": "p. ex. VS Code",
+			"assocDescriptionFile": "Asigna todos os arquivos do nome coincide co patrón global a linguaxe co identificador especificado.",
+			"assocDescriptionPath": "Asigna todos os arquivos a ruta de acceso a linguaxe co identificador especificado coincide co patrón global da ruta de acceso absoluta.",
+			"assocLabelFile": "arquivos con extensión",
+			"assocLabelPath": "arquivos con ruta de acceso",
+			"derivedDescription": "Facer coincidir arquivos que teñen elementos do mesmo nivel co mesmo nome pero con extensión diferente.",
+			"derivedLabel": "arquivos con elementos do mesmo nivel por nome",
+			"dirty": "un indicador con modificacións se o editor activo ten modificacións",
+			"falseDescription": "Deshabilitar o patrón.",
+			"fileDescription": "Facer coincidir todos os arquivos que teñan unha extensión de arquivo determinada.",
+			"fileLabel": "arquivos por extensión",
+			"filesDescription": "Facer coincidir todos os arquivos con calquera das extensións de arquivo.",
+			"filesLabel": "arquivos con varias extensións",
+			"folderDescription": "Facer coincidir un cartafol cun nome determinado en calquera ubicación.",
+			"folderLabel": "cartafol por nome (calquera ubicación)",
+			"folderName": "nome do cartafol da área de traballo na que o arquivo está contido (p. ej. myFolder)",
+			"folderPath": "ruta de acceso de arquivo de la cartafol del área de traballo en la que el arquivo está contido (p. ex. /Users/Development/myFolder)",
+			"languageSpecificEditorSettings": "Configuración do editor específica da linguaxe",
+			"languageSpecificEditorSettingsDescription": "Reemplazar configuración do editor para linguaxe",
+			"remoteName": "por exemplo, SSH",
+			"rootName": "nome da área de traballo (p. ex. myFolder o myWorkspace)",
+			"rootPath": "ruta do arquivo da área de traballo (p. ej. /Users/Development/myWorkspace)",
+			"separator": "un separador condicional (\"-\") que aparece só cando está rodeado de variables con valores",
+			"siblingsDescription": "Facer coincidir arquivos que teñen elementos do mesmo nivel co mesmo nome pero con extensión diferente.",
+			"topFolderDescription": "Facer coincidir un cartafol de nivel superior con un nome específico.",
+			"topFolderLabel": "cartafol por nome (nivel superior)",
+			"topFoldersDescription": "Facer coincidir varios cartafoles de nivel superior.",
+			"topFoldersLabel": "cartafoles con varios nomes (nivel superior)",
+			"trueDescription": "Habilitar o patrón."
 		},
 		"package": {
-			"description": "Proporciona características (IntelliSense avanzado, corrección automática) en archivos de configuración, como archivos de valores, de inicio y de recomendación de extensiones. ",
+			"description": "Proporciona características (IntelliSense avanzado, corrección automática) en arquivos de configuración, como arquivos de valores, de inicio e de recomendación de extensións. ",
 			"displayName": "Edición de configuración"
 		}
 	}
