--- a/i18n/vscode-language-pack-gl/translations/extensions/css.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/css.i18n.json
@@ -9,7 +9,7 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis y correspondencia de corchetes en archivos CSS, LESS y SCSS.",
+			"description": "Proporciona resaltado de sintaxe e correspondencia de corchetes en arquivos CSS, LESS e SCSS.",
 			"displayName": "Básicos de CSS"
 		}
 	}
