--- a/i18n/vscode-language-pack-gl/translations/extensions/git-ui.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/git-ui.i18n.json
@@ -10,7 +10,7 @@
 	"contents": {
 		"package": {
 			"displayName": "Interfaz de usuario de Git",
-			"description": "Integración de la UI de Git SCM"
+			"description": "Integración da UI de Git SCM"
 		}
 	}
 }
