--- a/i18n/vscode-language-pack-gl/translations/extensions/github-browser.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/github-browser.i18n.json
@@ -13,7 +13,7 @@
 			"description": "Examinar un repositorio de GitHub de forma remota"
 		},
 		"dist/scm": {
-			"no changes": "No hay cambios para confirmar."
+			"no changes": "Non hai cambios para confirmar."
 		}
 	}
 }
