--- a/i18n/vscode-language-pack-gl/translations/extensions/java.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/java.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona fragmentos de código, resaltado de sintaxis, correspondencia de corchetes y plegado de código en archivos de Java.",
-			"displayName": "Conceptos básicos del lenguaje Java"
+			"description": "Proporciona fragmentos de código, resaltado de sintaxe, correspondencia de corchetes e plegado de código en arquivos de Java.",
+			"displayName": "Conceptos básicos da linguaxe Java"
 		}
 	}
 }
