--- a/i18n/vscode-language-pack-gl/translations/extensions/merge-conflict.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/merge-conflict.i18n.json
@@ -11,24 +11,24 @@
 		"package": {
 			"command.accept.all-both": "Aceptar ambos",
 			"command.accept.all-current": "Aceptar todo actual",
-			"command.accept.all-incoming": "Aceptar todos los entrantes",
+			"command.accept.all-incoming": "Aceptar todos os entrantes",
 			"command.accept.both": "Aceptar ambos",
-			"command.accept.current": "Aceptar actuales",
+			"command.accept.current": "Aceptar actuais",
 			"command.accept.incoming": "Aceptar entrantes",
 			"command.accept.selection": "Aceptar selección",
 			"command.category": "Fusionar conflicto",
 			"command.compare": "Comparar conflicto actual",
-			"command.next": "Siguiente conflicto",
+			"command.next": "Seguinte conflicto",
 			"command.previous": "Conflicto anterior",
-			"config.autoNavigateNextConflictEnabled": "Indica si, después de resolver un conflicto de fusión mediante combinación, se va automáticamente al siguiente conflicto de este tipo.",
-			"config.codeLensEnabled": "Cree CodeLens para los bloques de conflictos de fusión mediante combinación en el editor.",
-			"config.decoratorsEnabled": "Cree elementos Decorator para los bloques de conflictos de fusión mediante combinación en el editor.",
-			"config.diffViewPosition": "Controla dónde se debe abrir la vista de diferencias al comparar los cambios en los conflictos de combinación.",
-			"config.diffViewPosition.below": "Abra la vista de diferencias debajo del grupo de editor actual.",
-			"config.diffViewPosition.beside": "Abra la vista de diferencias junto al grupo de editor actual.",
-			"config.diffViewPosition.current": "Abra la vista de diferencias en el grupo de editor actual.",
+			"config.autoNavigateNextConflictEnabled": "Indica se, despois de resolver un conflicto de fusión mediante combinación, se vai automáticamente ao seguinte conflicto deste tipo.",
+			"config.codeLensEnabled": "Cree CodeLens para os bloques de conflictos de fusión mediante combinación no editor.",
+			"config.decoratorsEnabled": "Cree elementos Decorator para os bloques de conflictos de fusión mediante combinación no editor.",
+			"config.diffViewPosition": "Controla onde se debe abrir a vista de diferenzas ao comparar os cambios nos conflictos de combinación.",
+			"config.diffViewPosition.below": "Abra a vista de diferenzas deixo do grupo de editor actual.",
+			"config.diffViewPosition.beside": "Abra a vista de diferenzas xunto ao grupo de editor actual.",
+			"config.diffViewPosition.current": "Abra a vista de diferenzas no grupo de editor actual.",
 			"config.title": "Fusionar conflicto",
-			"description": "Resaltado y comandos para conflictos de fusión insertada.",
+			"description": "Resaltado e comandos para conflictos de fusión insertada.",
 			"displayName": "Fusionar conflicto"
 		}
 	}
