--- a/i18n/vscode-language-pack-gl/translations/extensions/clojure.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/clojure.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis y correspondencia de corchetes en archivos de Clojure.",
-			"displayName": "Conceptos básicos del lenguaje Clojure"
+			"description": "Proporciona resaltado de sintaxe e correspondencia de corchetes en arquivos de Clojure.",
+			"displayName": "Conceptos básicos da linguaxe Clojure"
 		}
 	}
 }
