--- a/i18n/vscode-language-pack-gl/translations/extensions/dart.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/dart.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis y coincidencia de período de tiempo en archivos dardo.",
-			"displayName": "Datos básicos del lenguaje de dardos"
+			"description": "Proporciona resaltado de sintaxe e coincidencia de período de tempo en arquivos Dart.",
+			"displayName": "Datos básicos da linguaxe de Dart"
 		}
 	}
 }
