--- a/i18n/vscode-language-pack-gl/translations/extensions/docker.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/docker.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis y correspondencia de corchetes en archivos de Docker.",
-			"displayName": "Conceptos básicos del lenguaje Docker"
+			"description": "Proporciona resaltado de sintaxe e correspondencia de corchetes nos archivos de Docker.",
+			"displayName": "Conceptos básicos da linguaxe de Docker"
 		}
 	}
 }
