--- a/i18n/vscode-language-pack-gl/translations/extensions/github-authentication.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/github-authentication.i18n.json
@@ -9,13 +9,13 @@
 	"version": "1.0.0",
 	"contents": {
 		"dist/common/keychain": {
-			"keychainWriteError": "Error al escribir la información de inicio de sesión en la cadena de claves: \"{0}\".",
-			"troubleshooting": "Guía para la solución de problemas"
+			"keychainWriteError": "Erro a escribir a información de inicio de sesión na cadea de chaves: \"{0}\".",
+			"troubleshooting": "Guía para a solución de problemas"
 		},
 		"dist/githubServer": {
 			"signingIn": "$(mark-github) Iniciando sesión en github.com...",
 			"status.git.signIn.name": "Inicio de sesión en GitHub",
-			"validUri": "Escriba un URI válido de la página de inicio de sesión de GitHub."
+			"validUri": "Escriba un URI válido da páxina de inicio de sesión de GitHub."
 		},
 		"package": {
 			"description": "Proveedor de autenticación de GitHub",
