--- a/i18n/vscode-language-pack-gl/translations/extensions/gulp.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/gulp.i18n.json
@@ -9,16 +9,16 @@
 	"version": "1.0.0",
 	"contents": {
 		"dist/main": {
-			"execFailed": "La detección automática de gulp para la carpeta {0} falló con el error: {1}",
-			"gulpShowOutput": "Ir a la salida",
-			"gulpTaskDetectError": "Problemas para encontrar tareas de gulp. Vea la salida para obtener más información."
+			"execFailed": "A detección automática de gulp para o cartafol {0} fallou co erro: {1}",
+			"gulpShowOutput": "Ir á saída",
+			"gulpTaskDetectError": "Problemas para atopar tarefas de gulp. Vexa a saída para obtener máis información."
 		},
 		"package": {
-			"config.gulp.autoDetect": "Controla la habilitación de la detección de tareas de Gulp. La detección de tareas de Gulp puede hacer que se ejecuten archivos en cualquier espacio de trabajo abierto.",
-			"description": "Extensión para añadir funcionalidad de Gulp a VSCode.",
+			"config.gulp.autoDetect": "Controla a habilitación da detección de tarefas de Gulp. A detección de tarefas de Gulp pode facer que se executen arquivos en calquera espazo de traballo aberto.",
+			"description": "Extensión para engadir funcionalidade de Gulp a VSCode.",
 			"displayName": "Soporte de Gulp para VSCode",
-			"gulp.taskDefinition.file.description": "El archivo de Gulp que proporciona la tarea. Se puede omitir.",
-			"gulp.taskDefinition.type.description": "La tarea de Gulp que se va a personalizar."
+			"gulp.taskDefinition.file.description": "O arquivo de Gulp que proporciona a tarefa. Pódese omitir.",
+			"gulp.taskDefinition.type.description": "A tarefa de Gulp que se vai a personalizar."
 		}
 	}
 }
