--- a/i18n/vscode-language-pack-gl/translations/extensions/ini.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/ini.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis y correspondencia de corchetes en archivos Ini.",
-			"displayName": "Conceptos básicos del lenguaje Ini"
+			"description": "Proporciona resaltado de sintaxis e correspondencia de corchetes en arquivos Ini.",
+			"displayName": "Conceptos básicos da linguaxe Ini"
 		}
 	}
 }
