--- a/i18n/vscode-language-pack-gl/translations/extensions/jake.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/jake.i18n.json
@@ -9,16 +9,16 @@
 	"version": "1.0.0",
 	"contents": {
 		"dist/main": {
-			"execFailed": "La detección automática de Jake para la carpeta {0} falló con el error: {1}",
-			"jakeShowOutput": "Ir a la salida",
-			"jakeTaskDetectError": "Problema para encontrar tareas de jake. Vea la salida para más información."
+			"execFailed": "A detección automática de Jake para o cartafol {0} fallou co erro: {1}",
+			"jakeShowOutput": "Ir á saída",
+			"jakeTaskDetectError": "Problema para atopar tarefas de jake. Vexa a saída para máis información."
 		},
 		"package": {
-			"config.jake.autoDetect": "Controla la activación de la detección de tareas de Jake. La detección de tareas de Jake puede hacer que se ejecuten los archivos de cualquier área de trabajo abierta.",
-			"description": "Extensión que agrega funcionalidad de Jake a VS Code.",
-			"displayName": "Funcionalidad de Jake para VS Code",
-			"jake.taskDefinition.file.description": "EL archivo de Jake que proporciona la tarea. Se puede omitir.",
-			"jake.taskDefinition.type.description": "La tarea de Jake que se va a personalizar."
+			"config.jake.autoDetect": "Controla a activación da detección de tarefas de Jake. A detección de tarefas de Jake pode hacer que se executen os arquivos de calquera área de traballo aberta.",
+			"description": "Extensión que engade funcionalidade de Jake a VS Code.",
+			"displayName": "Funcionalidade de Jake para VS Code",
+			"jake.taskDefinition.file.description": "O arquivo de Jake que proporciona a tarefa. Pódese omitir.",
+			"jake.taskDefinition.type.description": "A tarefa de Jake que se vai a personalizar."
 		}
 	}
 }
