--- a/i18n/vscode-language-pack-gl/translations/extensions/json.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/json.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis y coincidencia de corchetes en los archivos JSON.",
-			"displayName": "Conceptos básicos de lenguaje JSON"
+			"description": "Proporciona resaltado de sintaxe e coincidencia de corchetes nos arquivos JSON.",
+			"displayName": "Conceptos básicos da linguaxe JSON"
 		}
 	}
 }
