--- a/i18n/vscode-language-pack-gl/translations/extensions/markdown-notebook-math.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/markdown-notebook-math.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"displayName": "Matemáticas del bloc de notas con Markdown",
-			"description": "Proporciona un potente soporte de lenguaje para archivos Markdown."
+			"displayName": "Matemáticas do bloc de notas con Markdown",
+			"description": "Proporciona un potente soporte de linguaxe para arquivos Markdown."
 		}
 	}
 }
