--- a/i18n/vscode-language-pack-gl/translations/extensions/microsoft-authentication.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/microsoft-authentication.i18n.json
@@ -9,17 +9,17 @@
 	"version": "1.0.0",
 	"contents": {
 		"dist/AADHelper": {
-			"signOut": "Se ha cerrado la sesión porque se ha producido un error al leer la información de autenticación almacenada."
+			"signOut": "Pechouse a sesión porque se produceu un erro ao ler a información de autenticación almacenada."
 		},
 		"dist/keychain": {
-			"keychainWriteError": "Error al escribir la información de inicio de sesión en la cadena de claves: \"{0}\".",
+			"keychainWriteError": "Erro ao escribir a información de inicio de sesión na cadea de chaves: \"{0}\".",
 			"troubleshooting": "Guía de solución de problemas"
 		},
 		"package": {
 			"description": "Proveedor de autenticación de Microsoft",
-			"displayName": "Cuenta Microsoft",
+			"displayName": "Conta Microsoft",
 			"signIn": "Iniciar sesión",
-			"signOut": "Cerrar sesión"
+			"signOut": "Pechar sesión"
 		}
 	}
 }
