--- a/i18n/vscode-language-pack-gl/translations/extensions/powershell.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/powershell.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona fragmentos de código, resaltado de sintaxis, correspondencia de corchetes y plegado de código en archivos de Powershell.",
-			"displayName": "Conceptos básicos del lenguaje Powershell"
+			"description": "Proporciona fragmentos de código, resaltado de sintaxe, correspondencia de corchetes e pregado de código en arquivos de Powershell.",
+			"displayName": "Conceptos básicos da linguaxe Powershell"
 		}
 	}
 }
