--- a/i18n/vscode-language-pack-gl/translations/extensions/python.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/python.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis, correspondencia de corchetes y plegado de código en archivos de Python.",
-			"displayName": "Conceptos básicos del lenguaje Python"
+			"description": "Proporciona resaltado de sintaxe, correspondencia de corchetes e pregado de código en arquivos de Python.",
+			"displayName": "Conceptos básicos da linguaxe Python"
 		}
 	}
 }
