--- a/i18n/vscode-language-pack-gl/translations/extensions/r.i18n.json
+++ b/i18n/vscode-language-pack-gl/translations/extensions/r.i18n.json
@@ -9,8 +9,8 @@
 	"version": "1.0.0",
 	"contents": {
 		"package": {
-			"description": "Proporciona resaltado de sintaxis y correspondencia de corchetes en archivos de R.",
-			"displayName": "Conceptos básicos del lenguaje R"
+			"description": "Proporciona resaltado de sintaxe e correspondencia de corchetes en arquivos de R.",
+			"displayName": "Conceptos básicos da linguaxe R"
 		}
 	}
 }
